force-app/main/default/objects/ContractDetail__c/ContractDetail__c.object-meta.xml
<CustomObject>
    <description>represents all Materials/Products that are contracted within the sales agreement.</description>
    <label>Contract Detail</label>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Contract Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>