force-app/main/default/objects/ContractDetail__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Contract associated to the Contract Line Item</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Details</relationshipLabel>
    <relationshipName>Contract_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>