force-app/main/default/objects/ContractDetail__c/fields/ContractedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ContractedQuantity__c</fullName>
    <description>Contracted Quantity, updated via SAP</description>
    <label>Contracted Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>