force-app/main/default/objects/ContractDetail__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <description>Numerate items of the Contract, updated via SAP</description>
    <label>Item number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>