force-app/main/default/objects/ContractDetail__c/fields/MaterialName__c.field-meta.xml
<CustomField>
    <fullName>MaterialName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product associated to the Contract Line Item</description>
    <label>Material Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Details</relationshipLabel>
    <relationshipName>ContractDetails</relationshipName>
    <type>Lookup</type>
</CustomField>