force-app/main/default/objects/ContractDetail__c/fields/NetPrice__c.field-meta.xml
<CustomField>
    <fullName>NetPrice__c</fullName>
    <description>Net Price, updated via SAP</description>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>