force-app/main/default/objects/ContractDetail__c/fields/Per__c.field-meta.xml
<CustomField>
    <fullName>Per__c</fullName>
    <description>The amount of the UoM, e.g. per 1000 liters, updated via SAP</description>
    <label>Per</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>