force-app/main/default/objects/ContractDetail__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <description>Contracted Storage, updated via SAP</description>
    <label>Storage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>