force-app/main/default/objects/ContractDetail__c/fields/StorageCode__c.field-meta.xml
<CustomField>
    <fullName>StorageCode__c</fullName>
    <description>Contract Storage, Updated by SAP</description>
    <label>Storage Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>