force-app/main/default/objects/ContractDetail__c/fields/StorageDescription__c.field-meta.xml
<CustomField>
    <fullName>StorageDescription__c</fullName>
    <description>storage label, updated via SAP</description>
    <label>Storage Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>